*New and improved -- Now with fine-tuning!*
- Updated `combined_confidence.py` to support fine-tuned models and added logic for model comparison.
- Introduced `compare_base_vs_finetuned.py` to evaluate performance and calibration metrics between base and fine-tuned models.
- Created `create_demo_visualizations.py` for generating visual representations of fine-tuning results.
- Implemented `fine_tune_model.py` for efficient fine-tuning of Llama 3.1 using LoRA.
- Added `quick_demo_finetuning.py` to simulate the fine-tuning process without actual training.
- Updated `README.md` with detailed fine-tuning instructions and insights.
- Included new datasets in `sentiment_datasets.py` for comprehensive testing.
- Added calibration and performance comparison images to the `images/fine_tuning` directory.
- Updated `requirements.txt` to include fine-tuning dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ sentencepiece>=0.1.99
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
 numpy>=1.24.0
+
+# Fine-tuning dependencies (optional)
+peft>=0.6.0
+bitsandbytes>=0.41.0
+datasets>=2.14.0
+wandb>=0.15.0
