Fine-tuning.  Lots of massaging to the generated examples to make everything go.
- Added `add_weak_negative_examples.py` to generate and append 900 new weak negative examples to the dataset.
- Updated `.gitignore` to include fine-tuned models, training artifacts, and Hugging Face cache directories.
- Refactored imports in various scripts to use `dataset_loader` for improved dataset handling.
- Introduced new scripts for dataset completion and visualization generation.
- Updated `README.md` to reflect changes in dataset structure and usage.
- Removed outdated images and added new visualizations for better clarity in results.

--- a/.gitignore
+++ b/.gitignore
@@ -142,5 +142,20 @@ dmypy.json
 *.safetensors
 models/
 
+# Fine-tuned models and training artifacts
+fine_tuned_sentiment_model/
+checkpoints/
+runs/
+
+# ML experiment tracking
+mlruns/
+wandb/
+.wandb/
+lightning_logs/
+
+# Hugging Face cache
+.cache/
+transformers_cache/
+
 # Generated images (optional - you might want to track these)
 # images/
