--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# Core dependencies for confidence estimation
+# Install with: pip install -r requirements.txt
+
 requests>=2.25.0
 torch>=2.0.0
 transformers>=4.35.0
@@ -13,4 +16,9 @@ numpy>=1.24.0
 peft>=0.6.0
 bitsandbytes>=0.41.0
 datasets>=2.14.0
-wandb>=0.15.0
+# wandb>=0.15.0  # Optional: experiment tracking (disabled by default)
+
+# API server dependencies
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.4.0
