Remove large model files from repository (>640MB files exceed GitHub limits)
- Updated .gitignore to exclude *.safetensors, *.bin, and fine_tuned_sentiment_model/
- Users will need to run fine-tuning locally to generate model weights
- Evaluation cache (780KB) still included for instant visualization generation

--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,12 @@ dmypy.json
 *.swp
 *.swo
 
-# Training artifacts (keep model weights but exclude training checkpoints)
+# Large model files (too big for GitHub - users will fine-tune locally)
+*.safetensors
+*.bin
+fine_tuned_sentiment_model/
+
+# Training artifacts
 checkpoints/
 runs/
 
